--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 	</div>
 
 	<script>var require = { paths: { 'vs': '../node_modules/monaco-editor/min/vs' } };</script>
-	<script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
-	<script src="../node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-	<script src="../node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+	<script src="./node_modules/monaco-editor/min/vs/loader.js"></script>
+	<script src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+	<script src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
 
 	<script src="app.js"></script>
 
