--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 	<script src="./node_modules/monaco-editor/min/vs/loader.js"></script>
 	<script src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
 	<script src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+	<script src="./node_modules/acorn/dist/acorn.js"></script>
 
 	<script src="app.js"></script>
 
