--- a/index.html
+++ b/index.html
@@ -1,73 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>JS.CC.LAB</title>
+	<title>Creative Coding Lab</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<link rel="stylesheet" data-name="vs/editor/editor.main" href="../node_modules/monaco-editor/min/vs/editor/editor.main.css">
-
-	<style type="text/css">
-		*{margin:0;
-			padding: 0;}
-		body{
-			height: 100%;
-			width: 100%;
-			overflow: hidden;
-		}
-		table{
-			width: 100%;
-			height: 100vh;
-		}
-		#code-panel{
-			width: 100%;
-			height: 100%;
-		}
-		#canvas{
-			background-color: #fff;
-		}
-		#toolbar{
-			display: inline-block;
-			position: absolute;
-			right: 5px;
-			bottom: 5px;
-		}
-		#toolbar a{
-			font-size: 30px;
-		    text-decoration: none;
-		}
-		.glossy{
-			background-color: #ede;
-		    padding: 10px;
-		    border-radius: 80px;
-		    box-shadow: 0 0 10px;
-		}
-		#indicator{
-			display: inline-block;
-			width: 18px;
-			height: 18px;
-			left:50%;
-			bottom: 20px;
-			background-color: rgb(0,230,23);
-			position: absolute;
-		}
-		.myGlyphMarginClass {
-			background: red;
-		}
-		.myContentClass {
-			background: lightblue;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 	<table>
 		<tr>
-			<td style="width: 50%;"><div id="code-panel"></div></td>
-			<td style="overflow: hidden;"><canvas id="canvas" width="800" height="800"></canvas></td>
+			<td style="width: 50%;">
+				<div id="code-panel"></div>
+			</td>
+			<td style="overflow: hidden;">
+				<canvas id="canvas" width="800" height="800"></canvas>
+			</td>
 		</tr>
 	</table>
 
-	<div id="indicator"></div>
+	<div id="indicator" title="build succeeded"></div>
 
 	<div id="toolbar">
 		<a href="javascript:alert('js canvas lab 0.0.1\nevox (c) 2020, germering');" class="glossy">⚙️</a>
@@ -79,7 +32,7 @@
 	<script src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
 	<script src="./node_modules/acorn/dist/acorn.js"></script>
 
-	<script src="app.js"></script>
+	<script src="index.js" type="module"></script>
 
 </body>
 </html>
